--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+$font-size-base: 0.875rem;
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+
+@import '~primeicons/primeicons';
+@import '~primeng/resources/primeng.min';
+@import '~primeng/resources/themes/saga-blue/theme';
+
+
